2024 Mar 11 - update image refs

--- a/src/content/blog/2023-11-24-Badlands.mdx
+++ b/src/content/blog/2023-11-24-Badlands.mdx
@@ -12,9 +12,9 @@ tags:
   - explore
   - night
 description: "Late night hike into the Badlands of Indio"
-image1: "https://skicyclerun.s3.us-west-2.amazonaws.com/albums/indio2023/20231130014731_sk1.jpeg"
-image2: "https://skicyclerun.s3.us-west-2.amazonaws.com/albums/indio2023/20231124222539_cc.jpeg"
-image3: "https://skicyclerun.s3.us-west-2.amazonaws.com/albums/indio2023/20231119010652_sk1.jpeg"
+image1: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_sk1.jpeg"
+image2: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_cc.jpeg"
+image3: "https://lib.skicyclerun.com/albums/indio2023/20231119013837_sk1.jpeg"
 ---
 
-Sunset hike, returning back well after dark. Very cool to walk under the stars...
+Sunset hike, returning back to the car well after dark. Very cool to walk under the stars in the desert...
