2024 Mar 12 - package and MDX fixes

--- a/src/content/blog/2023-11-24-Badlands.mdx
+++ b/src/content/blog/2023-11-24-Badlands.mdx
@@ -11,6 +11,7 @@ tags:
   - hike
   - explore
   - night
+class: "2024 > Travel > New Zealand & Austrialia"
 description: "Late night hike into the Badlands of Indio"
 image1: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_sk1.jpeg"
 image2: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_cc.jpeg"
