--- a/src/content/blog/2024-SailAway.mdx
+++ b/src/content/blog/2024-SailAway.mdx
@@ -1,6 +1,8 @@
 ---
+layout: "@layouts/MDXLayout.astro"
 author: Tim Halley
 title: '2024 Voyage to the southern hemisphere'
+postclass: "2024 > Travel > New Zealand & Austrialia"
 type: 'TRAVEL'
 pubDatetime: 2024-03-12T15:30:00.816Z
 slug: "2024-SailAway"
@@ -15,5 +17,4 @@ tags:
     - sailing
     - downunder
     - vacation
-
 ---
