2024 Mar 12 - Voyage S3 images

--- a/src/content/blog/2024-SailAway.mdx
+++ b/src/content/blog/2024-SailAway.mdx
@@ -8,10 +8,9 @@ pubDatetime: 2024-03-12T15:30:00.816Z
 slug: "2024-SailAway"
 featured: false
 description: 'off we go, before its all over!'
-Image: {
-    url: 'zen-brush.svg',
-    alt: 'wish it was this simple'
-}
+image1: "https://lib.skicyclerun.com/albums/voyage/20240312180026_cc.jpeg"
+image2: "https://lib.skicyclerun.com/albums/voyage/20240312180220_cc.jpeg"
+image3: "https://lib.skicyclerun.com/albums/voyage/20240312182218_cc.jpeg"
 tags:
     - travels
     - sailing
