2024 Apr 4 - foto fix

--- a/src/content/blog/2023-11-24-Badlands.mdx
+++ b/src/content/blog/2023-11-24-Badlands.mdx
@@ -13,6 +13,7 @@ tags:
   - night
 class: "2024 > Travel > New Zealand & Austrialia"
 description: "Late night hike into the Badlands of Indio"
+album: "indio2023"
 image1: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_sk1.jpeg"
 image2: "https://lib.skicyclerun.com/albums/indio2023/20231119013819_cc.jpeg"
 image3: "https://lib.skicyclerun.com/albums/indio2023/20231119013837_sk1.jpeg"
