2024 Apr 12 - Gallery Layout Test

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -16,7 +16,7 @@ align them with business objectives. For the last 5 years I have spent as a Ente
 Architect on the harmonization of internal and external services for a large software
 cloud company based in Germany.
 
-[More detail in professional LinkedIn profile](https://www.linkedin.com/in/timothyhalley).
+[Professional history and projects are in my LinkedIn profile](https://www.linkedin.com/in/timothyhalley).
 
 While not in my office, I'm at my outdoor office: SKIING, CYCLING, and HIKING/RUNNING whenever I can.
 
