--- a/src/content/blog/2024-00-00-Test.mdx
+++ b/src/content/blog/2024-00-00-Test.mdx
@@ -8,12 +8,15 @@ slug: Test-Photo-Gallery
 featured: true
 tags:
   - development
-  - photos
-  - toggle
+  - test
+  - html
   - astro
+  - javascript
 class: "2024 > Development > Gallery Photo Library"
 description: "Test toggle of layouts using light/dart method"
-album: "singapore"
+album: "default"
 ---
-
-Singapore, a vibrant island nation in maritime Southeast Asia, boasts modern skyscrapers, lush green spaces, and a multicultural population.
+1. Astro: Our foundation! Astro is like the architect who designs the blueprint for your site. It’s a futuristic static site generator that blends components from different frameworks seamlessly. With Astro, you’ll build performant, dynamic websites that load faster than a caffeinated squirrel. ☕🌟
+2. AWS Lambda: The serverless magician! AWS Lambda functions are like tiny wizards that execute code in response to events. Whether it’s handling form submissions, processing data, or fetching dynamic content, Lambda functions work their magic without the hassle of managing servers. ✨🧙‍♂️
+3. Tailwind CSS: The utility belt! Tailwind CSS is the Swiss Army knife of styling. It lets you wield utility classes like a seasoned warrior. Need a button? Just add bg-blue-500 and hover:bg-blue-600. It’s like having a whole toolbox in a single class name. 🔧🎨
+4. Remote API Calls: The interstellar communicator! When you need data from distant galaxies (or APIs), remote calls come to the rescue. Fetch weather forecasts, stock prices, or cat memes—whatever your heart desires. Just remember to wear your cosmic helmet while making those requests. 🌌📡
