--- a/src/content/blog/2024-SailAway.mdx
+++ b/src/content/blog/2024-SailAway.mdx
@@ -1,16 +1,20 @@
 ---
-layout: "@layouts/MDXLayout.astro"
+layout: "@layouts/MDXPhotos.astro"
 author: Tim Halley
-title: '2024 Voyage to the southern hemisphere'
-postclass: "2024 > Travel > New Zealand & Austrialia"
-type: 'TRAVEL'
 pubDatetime: 2024-03-12T15:30:00.816Z
+title: '2024 Voyage to the southern hemisphere'
+type: 'TRAVEL'
 slug: "2024-SailAway"
 featured: false
-description: 'Off we go, before its too late!'
+
 tags:
     - travels
-    - sailing
+    - cruise
     - downunder
     - vacation
+class: "2024 > Travel > Virgin Voyages > Resiliant Lady"
+description: 'Off we go, before its too late!'
+album: "voyage"
 ---
+
+The allure of cruise ships—the floating buffets, the endless booze, and the overly loud games where the stakes are higher than the waves. Alas, we’ve decided to keep our land legs intact. Perhaps we’ll stick to exploring on foot & bike, where the only buffet is at the local bakery, and the cruise directors don’t double as dance instructors. Fair winds to you, though!
