2024 Apr 13 - Added new post to see if shows...

--- a/src/content/blog/2024-01-01-Test.mdx
+++ b/src/content/blog/2024-01-01-Test.mdx
@@ -9,11 +9,11 @@ featured: true
 tags:
   - development
   - test
-  - html
+  - AWS
   - astro
   - javascript
 class: "2024 > Development > Gallery Photo Library"
-description: "Test toggle of layouts using light/dart method"
+description: "Debug page that is used for validation on site for new setup and toCodes"
 album: "default"
 ---
 1. Astro: Our foundation! Astro is like the architect who designs the blueprint for your site. It’s a futuristic static site generator that blends components from different frameworks seamlessly. With Astro, you’ll build performant, dynamic websites that load faster than a caffeinated squirrel. ☕🌟
