2024 Apr 23 - Lots of updates

--- a/src/content/blog/2024-03-15-SailAway.mdx
+++ b/src/content/blog/2024-03-15-SailAway.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2024-03-12T15:30:00.816Z
 title: '2024 Voyage to the southern hemisphere'
 type: 'TRAVEL'
 slug: "2024-SailAway"
-featured: false
+featured: true
 tags:
     - travels
     - cruise
