2024 Apr 27 - ImageX and fix glob issues

--- a/src/content/blog/2024-03-15-SailAway.mdx
+++ b/src/content/blog/2024-03-15-SailAway.mdx
@@ -16,4 +16,10 @@ description: 'Off we go, before its too late!'
 album: "voyage"
 ---
 
-The allure of cruise ships—the floating buffets, the endless booze, and the overly loud games where the stakes are higher than the waves. Alas, we’ve decided to keep our land legs intact. Perhaps we’ll stick to exploring on foot & bike, where the only buffet is at the local bakery, and the cruise directors don’t double as dance instructors. Fair winds to you, though!
+The allure of cruise ships—the floating buffets, the endless booze,
+and the overly loud games where the stakes are higher than the waves.
+Alas, we’ve decided to keep our land legs intact. Perhaps we’ll stick
+to exploring on foot & bike, where the only buffet is at the local
+bakery, and the cruise directors don’t double as dance instructors.
+
+Fair winds to you, though!
