--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,6 +1,6 @@
 ---
-layout: ../layouts/AboutLayout.astro
-title: "About"
+layout: '@layouts/AboutLayout.astro'
+title: 'About'
 ---
 import { Image } from "astro:assets";
 import plaguedoctor from "@images/plaguedoctor.svg";
@@ -11,7 +11,7 @@ integration solutions for various business domains, such as CRM, ERP, e-commerce
 diagnostics, and oil and gas related IT systems. I have led and mentored multiple
 teams across the globe using Agile and corporate best practices. I have strong skills
 and experience in programming, team alignment, system design, process optimization,
-and performance testing. I am a critical thinker who can solve complex problems and
+compliance and performance testing. I am a critical thinker who can solve complex problems and
 align them with business objectives. For the last 5 years I have spent as a Enterprise
 Architect on the harmonization of internal and external services for a large software
 cloud company based in Germany.
