--- a/src/pages/test.mdx
+++ b/src/pages/test.mdx
@@ -44,12 +44,14 @@ End Tailwinds
 
 MDX GUIDE: https://kabartolo.github.io/chicago-docs-demo/docs/mdx-guide/
 
-
 <Image src={plaguedoctor} alt="Getting past the lockdown"/>
-
-
-
 
 <div style={{backgroundColor: 'violet', padding: '1rem'}}>
   Try and change the background color to `tomato`.
 </div>
+
+<div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
+<div class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500"></div>
+<div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>
+<div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>
+
