--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXSVGPhotos.astro"
+layout: "@layouts/MDXPhotos.astro"
 author: Tim Halley
 pubDatetime: 2024-04-15T15:15:15-08:00
 title: SVG Photo Collage
@@ -11,7 +11,7 @@ tags:
   - SVGPhotos
 class: "2024 > Development > Photos > SVG "
 description: "Collage of photos converted to SVG for effect"
-album: "svgphotos"
+album: "svgicons"
 ---
 
 1. What Is SVG?
