2024-05-15 General updates and fixing image layout comp

--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -12,7 +12,7 @@ tags:
   - explore
   - cycle
 class: "2022 > Travel > Europe > Spain > Barcellona"
-description: "Exciting town of endless enclaves, teems with unique character wherever you go"
+description: "An exciting city with endless enclaves that teems with unique character wherever you go"
 album: "barcelona"
 ---
 
