--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -21,8 +21,8 @@ Nestled between mountains and sea, it boasts whimsical streets, each with its ow
 Quarter’s hidden plazas to Gaudí’s masterpieces like the Sagrada Família, Barcelona weaves a tapestry of
 diversity and charm. 🇪🇸✨
 
-1. Sagrada Família: Antoni Gaudí’s ongoing masterpiece, adorned with intricate carvings and soaring columns, remains a must-see.
-2. Gothic Quarter: Wander through its narrow alleys, discover century-old shops, and soak in the historic ambiance.
-3. Casa Batlló and La Pedrera: Explore Gaudí’s other whimsical designs, from iridescent dragon scales to undulating stone facades.
-4. During the 1992 Summer Olympics, Barcelona transformed itself. The city was opened to the sea with the construction of the Olympic
+1. **Sagrada Família**: Antoni Gaudí’s ongoing masterpiece, adorned with intricate carvings and soaring columns, remains a must-see.
+2. **Gothic Quarter**: Wander through its narrow alleys, discover century-old shops, and soak in the historic ambiance.
+3. **Casa Batlló and La Pedrera**: Explore Gaudí’s other whimsical designs, from iridescent dragon scales to undulating stone facades.
+4. During the **1992 Summer Olympics**, Barcelona transformed itself. The city was opened to the sea with the construction of the Olympic
 Village and Olympic Port in Poblenou. 
