--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -2,7 +2,7 @@
 layout: "@layouts/MDXPhotos.astro"
 author: Tim Halley
 pubDatetime: 2024-05-05T17:17:17-08:00
-title: GenAI Travel BucketList
+title: GenAI Travel - BucketList
 type: 'TRAVEL'
 slug: GenAI-Travel
 featured: true
