2024-May-23 Fix Gallery seeding 32x32 vs 800s

--- a/src/content/blog/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/2023-01-15-Tokyo.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2023-01-15T14:14:14+09:00
 title: Tokyo City
