--- a/src/content/blog/2024-01-01-Test.mdx
+++ b/src/content/blog/2024-01-01-Test.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Testing Testing
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Test Page
