--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2024-04-15T15:15:15-08:00
 title: SVG Photo Collage
