--- a/src/content/blog/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/2022-12-12-Jamacia.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2022-12-12T14:14:14-05:00
 title: Jamacia and Pickleball
