--- a/src/content/blog/2023-03-15-Darrels90.mdx
+++ b/src/content/blog/2023-03-15-Darrels90.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2023-03-15T11:11:11-08:00
 title: Darrels 90 Birthday
