--- a/src/content/blog/2023-11-24-Badlands.mdx
+++ b/src/content/blog/2023-11-24-Badlands.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2023-11-18T17:50:00-08:00
 title: Indio Badlands Hike
