--- a/src/content/blog/2024-03-15-SailAway.mdx
+++ b/src/content/blog/2024-03-15-SailAway.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2024-03-12T15:30:00.816Z
 title: '2024 Voyage - Resilant Lady'
