--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXPhotos.astro"
+layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2024-05-05T17:17:17-08:00
 title: GenAI Travel - BucketList
