2024-May-24 QCS (quick check sync)

--- a/src/content/blog/2023-11-24-Badlands.mdx
+++ b/src/content/blog/2023-11-24-Badlands.mdx
@@ -2,18 +2,27 @@
 layout: "@layouts/MDXLayout2.astro"
 author: Tim Halley
 pubDatetime: 2023-11-18T17:50:00-08:00
-title: Indio Badlands Hike
+title: Coachella Valley
 type: 'TRAVEL'
-slug: Hike-Badlands
+slug: Coachella-Valley
 featured: true
 tags:
   - travels
   - hike
   - explore
   - night
-class: "2024 > Travel > New Zealand & Austrialia"
-description: "Late night hike into the Badlands of Indio"
-album: "indio2023"
+class: "2017-2023 > Travel > California > Coachella Valley"
+description: "The Coachella Valley offers amazing, albiet temporary visits, places to explore!"
+album: "coachellavalley"
 ---
+The Coachella Valley is known for its wintertime resort cities, popular
+destinations for full-time retirees and seasonal residents. It hosts various
+annual events, including the Coachella Valley Music and Arts Festival, the
+Stagecoach Country Music Festival, and the Riverside County Fair and National
+Date Festival. The valley is home to cities such as Indio, Palm Springs,
+Palm Desert, and Rancho Mirage. 🌴🌵🌞
 
-Sunset hike, returning back to the car well after dark. Very cool to walk under the stars in the desert...
+🐎 The Coachella Valley International Equestrian Center (CVEC), also known as
+the Thermal Equestrian Center, is a premier equestrian facility located in
+the Coachella Valley, California. During the winter months, it becomes a hub of
+activity for horse enthusiasts, riders, and spectators alike.
