--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -13,6 +13,9 @@ class: "2024 > Development > Photos > SVG "
 description: "Collage of photos converted to SVG for effect"
 album: "svgicons"
 ---
+**The purpose of using SVG graphics on this website is to preload an image with a visual placeholder while the API to AWS S3 is invoked to retrieve the final image.** 🌟
+
+**Other Benefits**:
 
 1. What Is SVG?
   - SVG stands for Scalable Vector Graphics. It’s a web standard used to define vector-based graphics within web pages.
