2024-Mar-24 Update defaults and MDX names, etc...

--- a/src/content/blog/2024-03-15-VirginVoyages.mdx
+++ b/src/content/blog/2024-03-15-VirginVoyages.mdx
@@ -13,7 +13,7 @@ tags:
     - vacation
 class: "2024 > Travel > Virgin Voyages > Resilient Lady"
 description: 'Explore by big boat'
-album: "voyage"
+album: "virginvoyages"
 ---
 
 Resilient Lady, Virgin Voyages’ third cruise ship. Picture a vessel where sleek design meets social vibrancy—a floating sanctuary for adults seeking adventure. Here’s the lowdown:
