--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -13,7 +13,7 @@ tags:
   - pickleball
 class: "2022 > Travel > Europe > Portugal > Lisbon"
 description: "An exciting city with endless enclaves that teems with unique character wherever you go"
-album: "barcelona"
+album: "portugal"
 ---
 
 Barcelona, Spain’s most visited city, is a captivating blend of history, architecture, and culinary delights.
