2024-July-08 Debug cache default issues with href

--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -11,8 +11,8 @@ tags:
   - hike
   - explore
   - night
-class: "2017-2023 > Travel > California > Coachella Valley"
-description: "The Coachella Valley offers amazing, albiet temporary visits, places to explore!"
+class: "2018-2023 > Travel > California > Coachella Valley"
+description: "The Coachella Valley offers amazing places to explore!"
 album: "coachellavalley"
 ---
 The Coachella Valley is known for its wintertime resort cities, popular
@@ -31,7 +31,7 @@ Grand Prix purse exceeding $1,000,000 USD. 🐎🌟
 
 The Coachella Valley in Southern California is a captivating desert region that 
 offers a variety of hikes, each with its own unique terrain and features. Here 
-are some notable trails:
+are some notable place and trails we have visted from Nov 2018 - Nov 2023:
 
 **Andreas Canyon Trail**:
 - Terrain: This trail winds through a lush palm oasis within the Indian Canyons.
