2024-July-08 Fix keys and running new action

--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -11,6 +11,7 @@ tags:
   - hike
   - explore
   - night
+  - equestrian
 class: "2018-2023 > Travel > California > Coachella Valley"
 description: "The Coachella Valley offers amazing places to explore!"
 album: "coachellavalley"
