2025-07-25 - Lite changes to feature and version

--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2022-06-01T11:11:11+00:00
 title: Portugal
 type: 'TRAVEL'
 slug: Portugal-Tour
-featured: true
+featured: false
 tags:
   - travels
   - city
