--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2022-06-11T14:14:14+01:00
 title: Barcellona
 type: 'TRAVEL'
 slug: Barcellona-Spain
-featured: true
+featured: false
 tags:
   - travels
   - city
