--- a/src/content/blog/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/2022-12-12-Jamacia.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2022-12-12T14:14:14-05:00
 title: Jamacia and Pickleball
 type: 'TRAVEL'
 slug: Jamacia-Sandles
-featured: true
+featured: false
 tags:
   - travels
   - pickleball
