--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2023-11-18T17:50:00-08:00
 title: Coachella Valley
 type: 'TRAVEL'
 slug: Coachella-Valley
-featured: true
+featured: false
 tags:
   - travels
   - hike
