--- a/src/content/blog/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/2023-01-15-Tokyo.mdx
@@ -5,7 +5,7 @@ pubDatetime: 2023-01-15T14:14:14+09:00
 title: Tokyo City
 type: 'TRAVEL'
 slug: Tokyo-City-Explore
-featured: true
+featured: false
 tags:
   - travels
   - asia
