2025-07-25 Formating UI cleanup and contect adjustments

--- a/src/content/blog/2024-03-15-NewZealand.mdx
+++ b/src/content/blog/2024-03-15-NewZealand.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXVideo.astro"
-author: Tim Halley
+author: Halo Cyclone
 pubDatetime: 2024-03-12T15:30:00.816Z
 title: '2024 New Zealand'
 type: 'VLOG'
