--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Tim Axle
 pubDatetime: 2024-04-15T15:15:15-08:00
 title: SVG Photo Collage
 type: 'PHOTOS'
