--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Halo Cyclone
 pubDatetime: 2024-05-05T17:17:17-08:00
 title: GenAI Travel - BucketList
 type: 'TRAVEL'
