--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Orbit Strider
 pubDatetime: 2022-06-01T11:11:11+00:00
 title: Portugal
 type: 'TRAVEL'
