--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Orbit Strider
 pubDatetime: 2022-06-11T14:14:14+01:00
 title: Barcellona
 type: 'TRAVEL'
