--- a/src/content/blog/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/2022-12-12-Jamacia.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Orbit Strider
 pubDatetime: 2022-12-12T14:14:14-05:00
 title: Jamacia and Pickleball
 type: 'TRAVEL'
