--- a/src/content/blog/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/2023-01-15-Tokyo.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author: Tim Axle
 pubDatetime: 2023-01-15T14:14:14+09:00
 title: Tokyo City
 type: 'TRAVEL'
