--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Tim Halley
+author:Orbit Strider
 pubDatetime: 2023-11-18T17:50:00-08:00
 title: Coachella Valley
 type: 'TRAVEL'
