--- a/src/content/blog/2024-07-31-Montreal.mdx
+++ b/src/content/blog/2024-07-31-Montreal.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXVideo.astro"
-author: Tim Halley
+author: Halo Cyclone
 pubDatetime: 2024-07-31T16:00:00+00:00
 title: Montreal Architecture
 type: 'VLOG'
