--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -10,6 +10,7 @@ tags:
   - travels
   - city
   - explore
+  - hotel
   - pickleball
 class: "2022 > Travel > Europe > Portugal > Lisbon"
 description: "An exciting city with endless enclaves that teems with unique character wherever you go"
