--- a/src/content/blog/2025-08-07-Test Carousel.mdx
+++ b/src/content/blog/2025-08-07-Test Carousel.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXCarousel.astro"
+layout: "@layouts/MDXCarousel2.astro"
 author: DeepMind Halo
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Carousel
