Refactor configuration and update components
- Replaced SITE configuration with SkiCycleRunConfig in various files for consistency.
- Added PostCards component for rendering blog post cards.
- Introduced static page configuration and validation for slugs.
- Enhanced styles with new topography, animations, and scrollbar styles.
- Updated utility functions for generating Open Graph images and pagination.
- Removed deprecated types and consolidated type definitions.
- Improved localization support with new translation keys and language files.
- Added new constants for blog types and updated related logic.

--- a/src/content/blog/2024-01-01-Test.mdx
+++ b/src/content/blog/2024-01-01-Test.mdx
@@ -3,7 +3,7 @@ layout: "@layouts/MDXLayout2.astro"
 author: Testing Testing
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Test Page
-type: 'TESTDEV'
+type: 'BETA'
 slug: Test-Photo-Gallery
 featured: false
 tags:
