--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -3,7 +3,7 @@ layout: "@layouts/MDXLayout2.astro"
 author: Tim Axle
 pubDatetime: 2024-04-15T15:15:15-08:00
 title: SVG Photo Collage
-type: 'PHOTOS'
+type: 'BETA'
 slug: SVG-Collage
 featured: false
 tags:
