--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -10,6 +10,7 @@ tags:
   - genai
   - cities
   - explore
+  - genai
 class: "2024 > Travel > World > Places > GenAI Choices"
 description: "Simple question to ChatGPT CoPilot: Generate a bucketlist for must see travel locations before its too late!"
 album: "genai"
