--- a/src/content/blog/2025-08-07-Test Carousel.mdx
+++ b/src/content/blog/2025-08-07-Test Carousel.mdx
@@ -3,7 +3,7 @@ layout: "@layouts/MDXCarousel2.astro"
 author: DeepMind Halo
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Carousel
-type: 'TEST'
+type: 'BETA'
 slug: Test-Photo-Carousel
 featured: false
 tags:
