Update album field in blog posts to standardize to "skicyclerun"

--- a/src/content/blog/2024-03-15-NewZealand.mdx
+++ b/src/content/blog/2024-03-15-NewZealand.mdx
@@ -13,7 +13,7 @@ tags:
     - vacation
 class: "2024 > Travel > New Zealand"
 description: 'A breathtaking land of volcanoes, fjords, Maori heritage, lush forests, coastal charm, and pure tranquility.'
-album: "travels"
+album: "skicyclerun"
 videoID: "ttm-dxvyyz4"
 ---
 
