--- a/src/content/blog/2024-07-31-Montreal.mdx
+++ b/src/content/blog/2024-07-31-Montreal.mdx
@@ -13,6 +13,6 @@ tags:
   - adventures
 class: "2024 > All > Canada > Montreal"
 description: "Montreal blends historic charm with modern energy"
-album: "travels"
+album: "skicyclerun"
 videoID: "5JL6R62X0Dw"
 ---
