Checkpoint from VS Code for coding agent session

--- a/src/content/blog/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/2022-12-12-Jamacia.mdx
@@ -13,6 +13,7 @@ tags:
 class: "2022 > Travel > Jamacia > Pickleball"
 description: "Easy vacation for sun and fun. Played pickleball with campers"
 album: "jamacia"
+cover: "JamacaWestmoreland.png"
 ---
 
 An interesting pickleball camp done in an all inclusive resort on the southend of the island
