--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -15,6 +15,7 @@ tags:
 class: "2018-2023 > Travel > California > Coachella Valley"
 description: "The Coachella Valley offers amazing places to explore!"
 album: "coachellavalley"
+cover: "Travel_CochellaValleyLoneRider.png"
 ---
 The Coachella Valley is known for its wintertime resort cities, popular
 destinations for full-time retirees and seasonal residents. It hosts various
