--- a/src/content/blog/2024-01-01-Test.mdx
+++ b/src/content/blog/2024-01-01-Test.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "@layouts/MDXLayout2.astro"
-author: Testing Testing
+author: Maximus Megadoodler
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Test Page
 type: 'BETA'
@@ -15,6 +15,7 @@ tags:
 class: "2024 > Development > Gallery Photo Library"
 description: "Debug page that is used for validation on site for new setup and toCodes"
 album: "skicyclerun"
+cover: "AstroTestPage.png"
 ---
 1. Astro: The foundation framework! Astro is like the architect who designs the blueprint for your site. It’s a futuristic static site generator that blends components from different frameworks seamlessly. With Astro, you’ll build performant, dynamic websites that load faster than a caffeinated squirrel. ☕🌟
 2. AWS Lambda: The serverless magician! AWS Lambda functions are like tiny wizards that execute code in response to events. Whether it’s handling form submissions, processing data, or fetching dynamic content, Lambda functions work their magic without the hassle of managing servers. ✨🧙‍♂️
