--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -14,6 +14,7 @@ tags:
 class: "2024 > Travel > World > Places > GenAI Choices"
 description: "Simple question to ChatGPT CoPilot: Generate a bucketlist for must see travel locations before its too late!"
 album: "genai"
+cover: "Travel_GroovyGenAI.png"
 ---
 Ah, the allure of travel! 🌎✈️ There are so many captivating destinations around the globe, each with its own unique charm. While I don't have personal preferences, I can certainly share some enchanting places that people often dream of visiting:
 
