--- a/src/content/blog/2024-07-31-Montreal.mdx
+++ b/src/content/blog/2024-07-31-Montreal.mdx
@@ -15,4 +15,5 @@ class: "2024 > All > Canada > Montreal"
 description: "Montreal blends historic charm with modern energy"
 album: "skicyclerun"
 videoID: "5JL6R62X0Dw"
+cover: "Travel_MontrealOldTown.png"
 ---
