--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -12,9 +12,10 @@ tags:
   - explore
   - hotel
   - pickleball
-class: "2022 > Travel > Europe > Portugal > Lisbon"
-description: "An exciting city with endless enclaves that teems with unique character wherever you go"
+class: "2022 > Travel > Europe > Portugal"
+description: "An exciting country with deep history wherever you go"
 album: "portugal"
+cover: "Travel_CintraBeachHouses.png"
 ---
 
 🇵🇹 Portugal: A Land of Soulful Contrast and Timeless Grace
