--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -14,6 +14,7 @@ tags:
 class: "2022 > Travel > Europe > Spain > Barcellona"
 description: "An exciting city with endless enclaves that teems with unique character wherever you go"
 album: "barcelona"
+cover: 'Travel_Barcelona_Ink.png'
 ---
 
 Barcelona, Spain’s most visited city, is a captivating blend of history, architecture, and culinary delights.
