--- a/src/content/blog/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/2023-01-15-Tokyo.mdx
@@ -14,6 +14,7 @@ tags:
 class: "2023 > Travel > Tokyo"
 description: "Tokyo - an iconic city of life and amusement"
 album: "tokyo"
+cover: "Chiyoda_Sotokanda-60.png"
 ---
 A Symphony of Contrasts
 
