--- a/src/content/blog/2024-03-15-NewZealand.mdx
+++ b/src/content/blog/2024-03-15-NewZealand.mdx
@@ -2,7 +2,7 @@
 layout: "@layouts/MDXVideo.astro"
 author: Halo Cyclone
 pubDatetime: 2024-03-12T15:30:00.816Z
-title: '2024 New Zealand'
+title: 'New Zealand'
 type: 'VLOG'
 slug: "2024-New-Zealand"
 featured: true
@@ -15,6 +15,7 @@ class: "2024 > Travel > New Zealand"
 description: 'A breathtaking land of volcanoes, fjords, Maori heritage, lush forests, coastal charm, and pure tranquility.'
 album: "skicyclerun"
 videoID: "ttm-dxvyyz4"
+cover: "Travel_ChurchoftheGoodShepherd.png"
 ---
 
 New Zealand is a land of cinematic contrasts—snowcapped peaks like the Southern Alps give way to rolling green hills, primeval rainforests, and mirror-clear fjords. Its geothermal wonderlands bubble and steam beneath Maori legends, while sapphire coastlines unfurl beside golden beaches and rugged cliffs.
