--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -12,6 +12,7 @@ tags:
 class: "2024 > Development > Photos > SVG "
 description: "Collage of photos converted to SVG for effect"
 album: "svgicons"
+cover: "SVGPhotoCollage.png"
 ---
 **The purpose of using SVG graphics on this website is to preload an image with a visual placeholder while the API to AWS S3 is invoked to retrieve the final image.** 🌟
 
