--- a/src/content/blog/2025-08-07-Test Carousel.mdx
+++ b/src/content/blog/2025-08-07-Test Carousel.mdx
@@ -15,7 +15,7 @@ tags:
 class: "2025 > Development > Carousel Photo Library"
 description: "Simple debug page focused on the Carousel feature."
 album: "skicyclerun"
-cover: "@images/adventureoutside.svg"
+cover: "JungleCarousel.png"
 ---
 📸 Astro Carousel by DeepMind Halo
 A sleek, experimental showcase of interactive photo carousels using Astro and JavaScript. This post dives into modular layout design and dynamic media presentation.
