Refactor code structure for improved readability and maintainability

--- a/src/content/blog/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/2022-06-11-Barcelona.mdx
@@ -4,7 +4,7 @@ author: Orbit Strider
 pubDatetime: 2022-06-11T14:14:14+01:00
 title: Barcellona
 type: 'TRAVEL'
-slug: Barcellona-Spain
+slug: spain-barcelona
 featured: false
 tags:
   - travels
