--- a/src/content/blog/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/2023-01-15-Tokyo.mdx
@@ -4,7 +4,7 @@ author: Tim Axle
 pubDatetime: 2023-01-15T14:14:14+09:00
 title: Tokyo City
 type: 'TRAVEL'
-slug: Tokyo-City-Explore
+slug: tokyo-city
 featured: false
 tags:
   - travels
@@ -12,7 +12,7 @@ tags:
   - trains
   - city
 class: "2023 > Travel > Tokyo"
-description: "Tokyo - an iconic city of life and amusement"
+description: "Tokyo — a vibrant fusion of energy, culture, and endless visual sites to behold."
 album: "tokyo"
 cover: "Chiyoda_Sotokanda-60.png"
 ---
