--- a/src/content/blog/2024-01-01-Test.mdx
+++ b/src/content/blog/2024-01-01-Test.mdx
@@ -4,7 +4,7 @@ author: Maximus Megadoodler
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Test Page
 type: 'BETA'
-slug: Test-Photo-Gallery
+slug: test-photo-gallery
 featured: false
 tags:
   - development
