--- a/src/content/blog/2024-03-15-NewZealand.mdx
+++ b/src/content/blog/2024-03-15-NewZealand.mdx
@@ -4,7 +4,7 @@ author: Halo Cyclone
 pubDatetime: 2024-03-12T15:30:00.816Z
 title: 'New Zealand'
 type: 'VLOG'
-slug: "2024-New-Zealand"
+slug: "new-zealand"
 featured: true
 tags:
     - travels
