--- a/src/content/blog/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/2024-05-05-GenAITravelTips.mdx
@@ -1,10 +1,10 @@
 ---
+title: GenAI BucketList
 layout: "@layouts/MDXLayout2.astro"
 author: Halo Cyclone
 pubDatetime: 2024-05-05T17:17:17-08:00
-title: GenAI Travel - BucketList
 type: 'TRAVEL'
-slug: GenAI-Travel
+slug: genai-travel
 featured: true
 tags:
   - genai
