--- a/src/content/blog/2022-06-01-Portugal.mdx
+++ b/src/content/blog/2022-06-01-Portugal.mdx
@@ -4,7 +4,7 @@ author: Orbit Strider
 pubDatetime: 2022-06-01T11:11:11+00:00
 title: Portugal
 type: 'TRAVEL'
-slug: Portugal-Tour
+slug: portugal
 featured: false
 tags:
   - travels
