--- a/src/content/blog/2023-11-24-Coachella.mdx
+++ b/src/content/blog/2023-11-24-Coachella.mdx
@@ -4,7 +4,7 @@ author: Orbit Strider
 pubDatetime: 2023-11-18T17:50:00-08:00
 title: Coachella Valley
 type: 'TRAVEL'
-slug: Coachella-Valley
+slug: coachella-valley
 featured: false
 tags:
   - travels
