--- a/src/content/blog/2024-04-15-SVGAlbum.mdx
+++ b/src/content/blog/2024-04-15-SVGAlbum.mdx
@@ -4,7 +4,7 @@ author: Tim Axle
 pubDatetime: 2024-04-15T15:15:15-08:00
 title: SVG Photo Collage
 type: 'BETA'
-slug: SVG-Collage
+slug: svg-collage
 featured: false
 tags:
   - development
