--- a/src/content/blog/2024-07-31-Montreal.mdx
+++ b/src/content/blog/2024-07-31-Montreal.mdx
@@ -4,7 +4,7 @@ author: Halo Cyclone
 pubDatetime: 2024-07-31T16:00:00+00:00
 title: Montreal Architecture
 type: 'VLOG'
-slug: Montreal-Architecture
+slug: montreal-architecture
 featured: true
 tags:
   - travels
