--- a/src/content/blog/2025-08-07-Test Carousel.mdx
+++ b/src/content/blog/2025-08-07-Test Carousel.mdx
@@ -4,7 +4,7 @@ author: DeepMind Halo
 pubDatetime: 2024-04-15T10:10:10-10:00
 title: Astro Carousel
 type: 'BETA'
-slug: Test-Photo-Carousel
+slug: test-photo-carousel
 featured: false
 tags:
   - development
